--- a/index.html
+++ b/index.html
@@ -1,1 +1,105 @@
-Hello Momo!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marzia Jahan Momo - DevOps Engineer</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Marzia Jahan Momo</h1>
+        <p>DevOps Engineer</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#certifications">Certifications</a></li>
+            <li><a href="mailto:jahanmomo11@gmail.com">jahanmomo11@gmail.com</a></li>
+			<li><a href="tel:+8801722203464">+8801722203464</a></li>
+            <li><a href="https://linkedin.com/in/m-j-momo" target="_blank" class="linkedin-link">LinkedIn <img src="linkedin.png" alt="LinkedIn"></a></li>
+        </ul>
+    </nav>
+
+    <div class="container">
+        <section id="about">
+            <h2>About Me</h2>
+            <p>I am a DevOps Engineer with over 4 years of hands-on work experience in more than three real estate projects, from design to deployment. My experience in optimizing software development processes and system administration gives me the full potential to understand and implement DevOps culture easily.</p>
+        </section>
+
+        <section id="skills">
+            <h2>Skills</h2>
+            <p>Python, Golang, YAML, AWS, GCP, Terraform, Ansible, Kafka, RabbitMQ, MTTQ, Linux, Bash Scripting, Docker, Kubernetes, AWS EKS, Jenkins, GitHub Actions, GitLab CI/CD, Makefile, Helm, Helmfile, Kustomize, LB layer 4 and 7, Nginx, Service Mesh (Istio, Cilium), Elk stack, Nexus, Maven, Gradle, SIEM (Wazuh, Rapid7, Splunk), Prometheus, Grafana, SonarQube, Microservice, REST API, MySQL, PostgreSQL, RDS, DynamoDB, RedShift, Airflow, Snowflake, Django, Flask, FastAPI, Jira, Trello, ClickUp.</p>
+        </section>
+
+        <section id="experience">
+            <h2>Experience</h2>
+            <h3>Dependopolis Consulting Limited</h3>
+            <p><strong>DevOps Engineer</strong></p>
+            <p>Apr 2020 – Present</p>
+            <ul>
+		<li>Created infrastructure using terraform, reducing codebase by 40%</li>
+		<li>Implemented Gitlab CI/CD and GitHub Actions, replacing Jenkins, to enhance deployment consistency and security.</li>
+		<li>Managed on-prem environments using vSphere, ensuring robust and secure infrastructure.</li>
+		<li>Transitioned projects from vSphere to AWS cloud, leveraging the scalability and flexibility of AWS services, which resulted in improved efficiency and cost savings.</li>
+		<li>Reduced cost by 7% through optimized S3 endpoint usage within private subnets.</li>
+		<li>Deployed and managed on-prem and cloud Kubernetes clusters.</li>
+		<li>Enhanced database performance by implementing ProxySQL cluster, reducing latency.</li>
+		<li>Migrated over 10 applications to AWS, utilizing Lift and Shift, Replatforming and Refactoring strategies.</li>
+		<li>Containerized workloads, achieving a 20% reduction in cloud infrastructure costs.</li>
+		<li>Identified and decommissioned unused resources, cutting unnecessary costs by 15%.</li>
+		<li>Spearheaded the establishment of CI/CD pipelines, reducing deployment times by 50% and cutting setup time by 25%.</li>
+		<li>Implemented advanced caching and routing policies, significantly improving platform performance and user experience.</li>
+		<li>Automated infrastructure deployments and routine tasks, improving efficiency and reducing manual work.</li>
+            </ul>
+            <p><strong>Tech stacks:</strong> AWS, AWS EKS, Kubernetes, Docker, RDS, Ansible, Kafka, Airflow, Snowflake, Python, Golang, Django, DynamoDB, Nginx, FastAPI, Terraform</p>
+            <p><strong>Industry:</strong> Real Estate Projects, Hospitality Projects, E-commerce</p>
+        </section>
+
+        <section id="education">
+            <h2>Education</h2>
+            <h3>University of Chittagong, Bangladesh</h3>
+            <p>B.Sc. in Botany, 2020-2024</p>
+        </section>
+
+        <section id="certifications">
+            <h2>Professional Development and Certifications</h2>
+            <ul>
+                <li>Learn AWS: Beginner to SAA</li>
+                <li>DevOps: Docker to Kubernetes</li>
+                <li>Professional Cyber Security Career</li>
+                <li>DNS BootCamp</li>
+                <li>Istio-Service Mesh</li>
+                <li>System Design</li>
+                <li>DevOps Fundamental</li>
+            </ul>
+        </section>
+
+        <section id="projects">
+            <h2>Side Projects</h2>
+            <h3>SIEM – SecurityMindPro</h3>
+            <p>Created Security Information and Event Management (SIEM) solutions for small and medium businesses using Elk Stack, AWS, Wazuh, and Nginx.</p>
+        </section>
+    </div>
+
+    <footer>
+        <p>Marzia Jahan Momo | Jobra, Hathazari, Chittagong, Bangladesh | +8801722203464 | <a href="mailto:jahanmomo11@gmail.com">jahanmomo11@gmail.com</a></p>
+    </footer>
+    
+    <script>
+        // Smooth scroll for navigation
+        document.querySelectorAll('nav ul li a').forEach(anchor => {
+            anchor.addEventListener('click', function(e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+    </script>
+</body>
+</html>
