--- a/index.html
+++ b/index.html
@@ -5,45 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marzia Jahan Momo - DevOps Engineer</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Optional: Include Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <!-- Header Section -->
     <header>
         <h1>Marzia Jahan Momo</h1>
         <p>DevOps Engineer</p>
     </header>
 
+    <!-- Navigation Bar -->
     <nav>
         <!-- Menu Toggle Button for Mobile -->
-        <div class="menu-toggle" id="mobile-menu">
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="menu-toggle" id="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+            <i class="fas fa-bars"></i>
         </div>
 
-        <ul id="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#certifications">Certifications</a></li>
-            <li><a href="mailto:jahanmomo11@gmail.com">jahanmomo11@gmail.com</a></li>
-            <li><a href="tel:+8801722203464">+8801722203464</a></li>
-            <li><a href="https://linkedin.com/in/m-j-momo" target="_blank" class="linkedin-link">LinkedIn <img src="linkedin.png" alt="LinkedIn"></a></li>
+        <!-- Navigation Links -->
+        <ul class="nav__menu" id="nav-menu">
+            <li><a href="#about" class="nav__link">About</a></li>
+            <li><a href="#skills" class="nav__link">Skills</a></li>
+            <li><a href="#experience" class="nav__link">Experience</a></li>
+            <li><a href="#education" class="nav__link">Education</a></li>
+            <li><a href="#certifications" class="nav__link">Certifications</a></li>
+            <li><a href="mailto:jahanmomo11@gmail.com" class="nav__link">jahanmomo11@gmail.com</a></li>
+            <li><a href="tel:+8801722203464" class="nav__link">+8801722203464</a></li>
+            <li><a href="https://linkedin.com/in/m-j-momo" target="_blank" class="nav__link linkedin-link">LinkedIn <img src="linkedin.png" alt="LinkedIn"></a></li>
+            <!-- Theme Toggle Button -->
+            <li>
+                <button id="theme-button" class="theme-button" aria-label="Toggle theme">
+                    <i class="fas fa-moon"></i>
+                </button>
+            </li>
         </ul>
     </nav>
 
-    <div class="container">
-        <!-- Your existing sections remain unchanged -->
+    <!-- Scroll Top Button -->
+    <a href="#" id="scroll-top" class="scroll-top" aria-label="Scroll to top">
+        <i class="fas fa-arrow-up"></i>
+    </a>
+
+    <!-- Main Content Container -->
+    <div class="container" id="area-cv">
+        <!-- About Section -->
         <section id="about">
             <h2>About Me</h2>
             <p>I am a DevOps Engineer with over 4 years of hands-on work experience in more than three real estate projects, from design to deployment. My experience in optimizing software development processes and system administration gives me the full potential to understand and implement DevOps culture easily.</p>
         </section>
 
+        <!-- Skills Section -->
         <section id="skills">
             <h2>Skills</h2>
             <p>Python, Golang, YAML, AWS, GCP, Terraform, Ansible, Kafka, RabbitMQ, MTTQ, Linux, Bash Scripting, Docker, Kubernetes, AWS EKS, Jenkins, GitHub Actions, GitLab CI/CD, Makefile, Helm, Helmfile, Kustomize, LB layer 4 and 7, Nginx, Service Mesh (Istio, Cilium), Elk stack, Nexus, Maven, Gradle, SIEM (Wazuh, Rapid7, Splunk), Prometheus, Grafana, SonarQube, Microservice, REST API, MySQL, PostgreSQL, RDS, DynamoDB, RedShift, Airflow, Snowflake, Django, Flask, FastAPI, Jira, Trello, ClickUp.</p>
         </section>
 
+        <!-- Experience Section -->
         <section id="experience">
             <h2>Experience</h2>
             <h3>Dependopolis Consulting Limited</h3>
@@ -68,12 +85,14 @@
             <p><strong>Industry:</strong> Real Estate Projects, Hospitality Projects, E-commerce</p>
         </section>
 
+        <!-- Education Section -->
         <section id="education">
             <h2>Education</h2>
             <h3>University of Chittagong, Bangladesh</h3>
             <p>B.Sc. in Botany, 2020-2024</p>
         </section>
 
+        <!-- Certifications Section -->
         <section id="certifications">
             <h2>Professional Development and Certifications</h2>
             <ul>
@@ -87,48 +106,25 @@
             </ul>
         </section>
 
+        <!-- Projects Section -->
         <section id="projects">
             <h2>Side Projects</h2>
             <h3>SIEM – SecurityMindPro</h3>
             <p>Created Security Information and Event Management (SIEM) solutions for small and medium businesses using Elk Stack, AWS, Wazuh, and Nginx.</p>
         </section>
+
+        <!-- Resume Button -->
+        <div class="resume-button-container">
+            <button id="resume-button" class="resume-button">Download Resume</button>
+        </div>
     </div>
 
+    <!-- Footer Section -->
     <footer>
         <p>Marzia Jahan Momo | Jobra, Hathazari, Chittagong, Bangladesh | +8801722203464 | <a href="mailto:jahanmomo11@gmail.com">jahanmomo11@gmail.com</a></p>
     </footer>
     
-    <script>
-        // Smooth scroll for navigation
-        document.querySelectorAll('nav ul li a').forEach(anchor => {
-            anchor.addEventListener('click', function(e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-                
-                // Close the mobile menu after clicking
-                const navLinks = document.getElementById('nav-links');
-                if (navLinks.classList.contains('active')) {
-                    navLinks.classList.remove('active');
-                }
-            });
-        });
-
-        // Toggle mobile menu
-        const menuToggle = document.getElementById('mobile-menu');
-        const navLinks = document.getElementById('nav-links');
-
-        menuToggle.addEventListener('click', () => {
-            navLinks.classList.toggle('active');
-        });
-
-        // Optional: Close the menu when clicking outside
-        document.addEventListener('click', (e) => {
-            if (!navLinks.contains(e.target) && !menuToggle.contains(e.target)) {
-                navLinks.classList.remove('active');
-            }
-        });
-    </script>
+    <!-- Include JavaScript Files -->
+    <script src="main.js"></script>
 </body>
 </html>
