--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section id="certifications">
             <h2>Professional Development and Certifications</h2>
             <ul>
-                <li>
+				<li>
 					<a href="https://www.credly.com/badges/2800b44a-05ee-4f40-9aab-234cb8e15604/public_url" 
 						target="_blank" 
 						rel="noopener noreferrer">
@@ -100,11 +100,12 @@
 						Miro Client Collaboration
 					</a>
 				</li>	
-						<li>Learn AWS: Beginner to SAA</li>
+                <li>Learn AWS: Beginner to SAA</li>
                 <li>DevOps: Docker to Kubernetes</li>
                 <li>Professional Cyber Security Career</li>
                 <li>DNS BootCamp</li>
-			
+                <li>System Design</li>
+                <li>DevOps Fundamental</li>
             </ul>
         </section>
 
